:wheelchair: Fix contrast of labels of project page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -139,3 +139,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 a, a:focus, a:hover {
     color: #0628d6;
 }
+span.label {
+    background: #515151;
+}
